--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,7 +13,13 @@ jobs:
           script: |
             whoami
             cd ~/sw
+            nvm use v16.20.2
+            rm -rf cicdtest
+            git clone https://github.com/swrainbow/cicdtest.git
+            cd cicdtest
+            pm2 stop swserver.js
             ls -l
             touch hello.txt
             echo ${{ secrets.HOST }} >> hello.txt
+            pm2 start swserver.js
 
